# ruby-extension-process-safety

./: .gitignore  CMakeLists.txt  demo_ext.cpp  file_lock.rb  loopback_daemon.rb  loopback_workers.rb  test.rb
